--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,20 @@
         {
             "type": "git",
             "url": "git@github.com/noopable/np-composer-installer.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/noopable/Flower.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/noopable/page.git"
         }
     ],
     "require": {
-        "php": ">=5.4.10"
+        "php": ">=5.4.10",
+        "noopable/page": "dev-master",
+        "noopable/flower": "dev-master"
     },
     "autoload": {
         "psr-0": {
