update test configurations

--- a/tests/TestConfig.php.dist
+++ b/tests/TestConfig.php.dist
@@ -8,7 +8,7 @@
 return array(
     'modules' => array(
         'Flower',
-        'NpApp',
+        'np-app' => 'NpApp',
     ),
     'module_listener_options' => array(
         'config_glob_paths' => array(
